--- a/course/templates/course/student_actions.html
+++ b/course/templates/course/student_actions.html
@@ -5,4 +5,10 @@
             </i>
             <p>View assignments</p>
         </a>
+        <a href="quizzes" title = 'View quizzes'>
+            <i class='material-icons'>
+                question_answer
+            </i>
+            <p>View quizzes</p>
+        </a>
 </div>
