--- a/course/templates/course/tutor_actions.html
+++ b/course/templates/course/tutor_actions.html
@@ -9,7 +9,19 @@
             <i class='material-icons'>
                 post_add
             </i>
-            <p>Create assignments</p>
+            <p>Create assignment</p>
+        </a>
+        <a href="quizzes" title = 'View quizzes'>
+            <i class='material-icons'>
+                question_answer
+            </i>
+            <p>View quizzes</p>
+        </a>
+        <a href="quizzes/create" title = 'Create quiz'>
+            <i class='material-icons'>
+                add_comment
+            </i>
+            <p>Create quiz</p>
         </a>
         <a href="update" title = 'Edit course'>
             <i class='material-icons'>
