--- a/assignment/templates/assignment/upload_solution.html
+++ b/assignment/templates/assignment/upload_solution.html
@@ -18,7 +18,7 @@
   <li>></li>
   <li><a href="{% url 'course:list' course_type=course_type %}">{{course_type|capfirst}}</a></li>
   <li>></li>
-  <li>></li><li><a href="{% url 'course:detail' course_type=course_type id=course_id %}">Course</a></li>
+  </li><li><a href="{% url 'course:detail' course_type=course_type id=course_id %}">Course</a></li>
   <li>></li>
   <li><a href="{% url 'assignment:all' course_type=course_type course_id=course_id %}">All assignments</a></li>
   <li>></li>
