--- a/ui_components/static/ui_components/form_template_1.scss
+++ b/ui_components/static/ui_components/form_template_1.scss
@@ -164,7 +164,9 @@ body {
         }
       }
       button {
-        border: 1px dashed grey;
+        // border: 1px dashed grey;
+        border: none;
+        font-size: 16px;
         height: 6.5vh;
         margin: 10px 0 0 0;
         border-radius: 5px;
@@ -185,7 +187,7 @@ body {
           display: flex;
           justify-content: center;
           i {
-            padding: 0 5px 0 5px;
+            padding: 4px 5px 2px 5px;
           }
         }
       }
