--- a/assignment/templates/assignment/detail.html
+++ b/assignment/templates/assignment/detail.html
@@ -56,22 +56,24 @@
       <p class='detail-heading'>Questions:</p>
       {% for question in questions %}
         <p class='detail-content'>{{question.question|capfirst}}</p>
-        <div class='media'>
-          {% for media in question.media.all  %}
-            {% if media.name %}
-              <div>
-                <img src="{{ media.file.url }}" alt="{{ media.name }}">
-                <p>{{ media.name }}</p>
-              </div>
-            {% else %}
-              <div>
-                <img src="{{ media.file.url }}">
-              </div>
-            {% endif %}
-          {% endfor %}
-    </div>
+          {% if question.media.all|length > 0 %}
+            <div class='media'>
+            {% for media in question.media.all  %}
+                {% if media.name %}
+                <div>
+                    <img src="{{ media.file.url }}" alt="{{ media.name }}">
+                    <p>{{ media.name }}</p>
+                </div>
+                {% else %}
+                <div>
+                    <img src="{{ media.file.url }}">
+                </div>
+                {% endif %}
+            {% endfor %}
+            </div>
+          {% endif %}
         <hr style='border: .5px dashed rgb(200,200,200); margin:40px 0 40px 0;'>
       {% endfor %}
-    </div>
+  </div>
   
 {% endblock detail %}
