--- a/quiz_question/static/quiz_question/nested_form.scss
+++ b/quiz_question/static/quiz_question/nested_form.scss
@@ -1,13 +1,18 @@
 .form-nested {
   display: flex;
-  flex-flow: column wrap;
-  margin-left: 40px;
+  flex-flow: row wrap;
+  // margin-left: 40px;
+  width: 100%;
   label {
     font-size: 14px !important;
     margin-bottom: 2px !important;
     margin-top: 15px !important;
   }
+  input {
+    margin-right: 20px !important;
+  }
   textarea {
+    width: 95%;
     height: 45px;
     font-size: 15px !important;
   }
