--- a/ui_components/static/ui_components/form_template_1.scss
+++ b/ui_components/static/ui_components/form_template_1.scss
@@ -12,8 +12,8 @@ body {
         margin: 0;
         padding: 30px;
         font-family: "Noto Sans JP", sans-serif;
-        font-weight: 700;
-        font-size: 30px;
+        font-weight: 400;
+        font-size: 35px;
       }
     }
     form {
@@ -57,6 +57,7 @@ body {
         pointer-events: none;
         font-size: 15px;
         margin: 10px 0px 10px 0px;
+        // font-weight: 300;
         &.file {
           display: flex;
           flex-flow: row;
@@ -108,7 +109,8 @@ body {
         border-radius: 5px;
         outline: none;
         padding: 0 10px 0 10px;
-        font-size: 16px;
+        font-size: 17px;
+        font-weight: 300;
         // box-shadow: 0 2px 5px rgba(110, 110, 110, 0.1);
         transition: all 200ms ease-in-out;
         font-family: "Noto Sans JP", sans-serif;
@@ -157,6 +159,8 @@ body {
         resize: none;
         transition: all 200ms ease-in-out;
         font-family: "Noto Sans JP", sans-serif;
+        font-weight: 300;
+        font-size: 17px;
         &:focus {
           border-width: 2px;
           border-color: #4229b3;
