--- a/quiz/templates/quiz/student_actions.html
+++ b/quiz/templates/quiz/student_actions.html
@@ -1,8 +1,8 @@
-<div class='actions'>
-        <a href="submissions" title = 'View submission' >
-            <i class='material-icons'>
-                list
-            </i>
-            <p>View submission</p>
-        </a>
+<div class="actions">
+  <a href="submissions/{{object.id}}/detail" title="View submission">
+    <i class="material-icons">
+      list
+    </i>
+    <p>View submission</p>
+  </a>
 </div>
