submitting assignment redirects to submission detail page imporved css

--- a/quiz/static/quiz/submission_detail.scss
+++ b/quiz/static/quiz/submission_detail.scss
@@ -8,6 +8,18 @@
   font-size: 16px !important;
 }
 
+.header {
+  padding-bottom: 15px !important;
+}
+
+.lower {
+  display: none !important;
+}
+
+.upper {
+  margin-top: 50px !important;
+}
+
 .option {
   padding: 10px !important;
   border-radius: 5px !important;
