--- a/ui_components/templates/ui_components/detail_template_1.html
+++ b/ui_components/templates/ui_components/detail_template_1.html
@@ -22,12 +22,12 @@
               {% block sub-info %}
               {% endblock sub-info %}
           </div>
-          <hr style="border:.5px dashed rgb(200,200,200); margin: 30px 0 10px 0">
+          <hr class='upper' style="border:.5px dashed rgb(200,200,200); margin: 30px 0 10px 0">
           <div class='actions'>
             {% block actions %}
             {% endblock actions %}
           </div>
-          <hr style="border:.5px dashed rgb(200,200,200); margin: 10px 0 0 0">
+          <hr class='lower' style="border:.5px dashed rgb(200,200,200); margin: 10px 0 0 0">
         </div>
         <div class='image'>
             {% block image %}
