--- a/quiz/templates/quiz/student_actions.html
+++ b/quiz/templates/quiz/student_actions.html
@@ -1,5 +1,5 @@
 <div class="actions">
-  <a href="submissions/{{object.id}}/detail" title="View submission">
+  <a href="submissions/{{ submission_object.id }}/detail" title="View submission">
     <i class="material-icons">
       list
     </i>
